[project]
name = "agent_3"
version = "0.1.0"
description = "agent_3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
agent_3 = "agent_3.main:run"
run_crew = "agent_3.main:run"
train = "agent_3.main:train"
replay = "agent_3.main:replay"
test = "agent_3.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
